[tool.poetry]
name = "bikeshare-us"
version = "0.1.0"
description = ""
authors = ["Casper Damen <cdamen@bol.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
wheel = "^0.37.0"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
